build: run in Kubernetes